--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
 			</div><!-- /.container -->
 			<footer>
 	    		<ul>
-	        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
+	        		<li><a href="mailto:kumartaruncse@gmail.com">email</a></li>
 	        		<li><a href="https://github.com/tarunkumariitm">github.com/tarunkumariitm</a></li>
 				</ul>
 			</footer>
